# CCC

./: .gitignore  README.md  visualizer.html
.zed/: debug.json
asteroid/: CMakeLists.txt  main  main.cpp  output.out
drone/: CMakeLists.txt  buildings_test.in  buildings_test.out  check_vx.py  checklist_validator.py  debug_flight1.py  edge_case.in  edge_case.out  empty_flight.in  empty_flight.out  level1_1.in  main  main.cpp  show_flight.py  test.cpp  test_both.py  test_input.in  test_output.out  validate_level4.py  validate_strict.py  verify.py  verify2.py  verify_all.py  verify_correct.py
magic_money/: CMakeLists.txt  asdas.cpp  main  main.cpp
